src/objects/C501_Merge_Metric__c.object
<CustomObject>
    <fields>
        <fullName>AutoMerge_Percentage__c</fullName>
        <label>AutoMerge Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AutoMerge_Programs__c</fullName>
        <label>AutoMerge Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Intake_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>Confidence percentage for potential merge candidates found by this rule.</description>
        <label>Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Programs__c</fullName>
        <description>Which Programs are enabled for the rule to run to create potential merge candidates.</description>
        <label>Enabled Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Intake_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Ignore__c</fullName>
        <label>Total Ignore</label>
        <summaryFilterItems>
            <field>C501_Account_Merge__c.Merge_Action__c</field>
            <operation>equals</operation>
            <value>Ignore</value>
        </summaryFilterItems>
        <summaryForeignKey>C501_Account_Merge__c.Merge_Metric__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Merge__c</fullName>
        <label>Total Merge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unassigned__c</fullName>
        <label>Total Unassigned</label>
        <summaryFilterItems>
            <field>C501_Account_Merge__c.Merge_Action__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>C501_Account_Merge__c.Merge_Metric__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Merge Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Unassigned__c</columns>
        <columns>Enable__c</columns>
        <columns>Enabled_Programs__c</columns>
        <columns>Confidence__c</columns>
        <columns>AutoMerge_Percentage__c</columns>
        <columns>AutoMerge_Programs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merge Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>